--- a/biblioteka_app/templates/peoples_list.html
+++ b/biblioteka_app/templates/peoples_list.html
@@ -26,17 +26,18 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h1 class="modal-title fs-5" id="peopleAddLabel">Dodawanie osoby do listy</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="model" aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-                            <div class="modal-body">
-                                <form action="" method="POST">
-                                    {% csrf_token %}
-                                    {{ form.as_p }}
+                            <form action="" method="POST">
+                                <div class="modal-body">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}                                        
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cofnij</button>
                                     <input type="submit" value="Zapisz" class="btn btn-secondary">
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                            </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
