--- a/biblioteka_app/templates/categories_list.html
+++ b/biblioteka_app/templates/categories_list.html
@@ -28,15 +28,16 @@
                                 <h1 class="modal-title fs-5" id="categoryAddLabel"> Dodawanie Kategorii</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-                            <div class="modal-body">
-                                <form action="" method=POST>
-                                    {% csrf_token %}
-                                    {{ form.as_p }}
-                                    <input type="submit" value="Zapisz" class="btn btn-secondary">
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                            </div>
+                            <form action="" method=POST>
+                                <div class="modal-body">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}                                                        
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cofnij</button>
+                                    <input type="submit" value="Zapisz" class="btn btn-secondary">   
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
